helmProject/flask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
 rules:
 - host: victoria-nykytenko.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: flask-helm-project-flask-project
           port:
             number: 80
